# FourierCam

./: .gitignore  build.sh  install.sh  meson.build
src/: main.cpp  meson.build
src/controller/: Controller.cpp  Controller.h
src/model/: VideoHandler.cpp  VideoHandler.h
src/view/: Window.cpp  Window.h  meson.build
src/view/component/: SettingsBox.cpp  SettingsBox.h  VideoBox.cpp  VideoBox.h
src/view/shader/: ShaderManager.cpp  ShaderManager.h  meson.build
src/view/shader/shaderfiles/: dftFragment.glsl  fragment.glsl  funnyFragment.glsl  meson.build  vertex.glsl
